# ifood-case-nyc-taxi

./: .dockerignore  .env.example  .flake8  .gitignore  Arquitetura de Dados iFood com PySpark.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: auto-pr.yml  cd.yml  ci.yml
analysis/: answers.py  time_travel_demo.py
analysis/notebooks/: 01_exploratory_analysis.py  02_catalog_sql_demo.ipynb  exploracao.ipynb
analysis/sql/: q1_avg_total_amount_per_month.sql  q2_avg_passengers_per_hour_may.sql
conf/: pipeline.cloud.yaml  pipeline.dev.yaml  pipeline.hom.yaml  pipeline.prd.yaml  pipeline.yaml
dashboard/: app.py  index.html  requirements.txt
dashboard/data/: kpis.json
docs/: architecture.md  cicd.md
docs/adr/: ADR-001-delta-lake.md  ADR-002-medallion.md  ADR-003-partitioning.md  ADR-004-ambientes-git.md
docs/diagrams/: architecture.mmd
scripts/: generate_sample_data.py
src/ifood_case/: __init__.py  catalog.py  config.py  ingestion.py  main.py  quality.py  spark.py  transformations.py
src/ifood_case/pipeline/: __init__.py  bronze.py  gold.py  silver.py  silver_incremental.py
tests/: conftest.py  test_analysis.py  test_catalog.py  test_config.py  test_quality.py  test_silver_incremental.py  test_transformations.py
