[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifood-case-nyc-taxi"
version = "1.0.0"
description = "NYC Taxi Data Lakehouse (Medallion) em PySpark + Delta — Case Data Architect iFood"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pedro Salomão" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]
# Notebooks (.py estilo Databricks) e checkpoints do Jupyter não seguem o
# layout de módulo; mantê-los fora do black/isort evita ruído e quebras.
extend-exclude = '(\.ipynb_checkpoints|analysis/notebooks)'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests", "analysis"]
extend_skip_glob = ["*/.ipynb_checkpoints/*", "analysis/notebooks/*"]

# flake8 não lê pyproject.toml — a configuração real vive em `.flake8`.

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
# Libs de terceiros sem stubs (PyYAML etc.): não temos como tipá-las e
# instalar os stubs exigiria rede — silenciamos só o aviso de "sem stubs".
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-p no:warnings -v"
